--- a/index.html
+++ b/index.html
@@ -7,30 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
 </head>
-<header class="header">
+<div class="container">
+    <header class="header">
 
-    <h1>Memory Game</h1>
+        <h1>Memory Game</h1>
 
-</header>
+    </header>
 
-<body>
+    <body>
 
-    <section class="score-panel">
-        <h3>Score Panel</h3>
+        <section class="score-panel">
+            <h3>Score Panel</h3>
 
-        <ul id="rating" class="rating">
-            <li class="star"><i class="fa fa-star"></i></li>
-            <li class="star"><i class="fa fa-star"></i></li>
-            <li class="star"><i class="fa fa-star"></i></li>
-        </ul>
+            <ul id="rating" class="rating">
+                <li class="star"><i class="fa fa-star"></i></li>
+                <li class="star"><i class="fa fa-star"></i></li>
+                <li class="star"><i class="fa fa-star"></i></li>
+            </ul>
 
-        <span class="moves-counter">0</span> Moves
-        <div class="timer-container">
-            <span class="timer"><i class="fa fa-hourglass-start"></i> Timer: 00:00</span>
-        </div>
+            <span class="moves-counter">0</span> Moves
+            <div class="timer-container">
+                <span class="timer"><i class="fa fa-hourglass-start"></i> Timer: 00:00</span>
+            </div>
 
-    </section>
+            <div class="reset">
+                <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
+            </div>
+        </section>
 
+        <!-- Modal -->
+
+        <section class="win-game-modal">
+
+            <div id="modal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Congratulations!</h2>
+                    <p>You have won the game and found all 8 pairs of cards.</p>
+                    <img src="" alt="" class="modal-img">
+                    <button class="btn play-again-btn">Play Again?</button>
+                </div>
+            </div>
+        </section>
+        <ul class="deck"></ul>
+</div>
 </body>
 
 </html>
