--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="assets/style.css">
     <title>Memory Game</title>
 </head>
 <div class="container">
@@ -16,12 +15,10 @@
 
     </header>
 
-    <body>
-
         <section class="score-panel">
             <h3>Score Panel</h3>
 
-            <ul id="rating" class="rating">
+            <ul id="star-rating" class="rating">
                 <li class="star"><i class="fa fa-star"></i></li>
                 <li class="star"><i class="fa fa-star"></i></li>
                 <li class="star"><i class="fa fa-star"></i></li>
@@ -55,6 +52,5 @@
         </section>
         <ul class="deck"></ul>
 </div>
-</body>
-
+<script src="scripts/script.js"></script>
 </html>
