added more info button with jquery hide/show

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/ecb94a392d.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>Memory Game</title>
 </head>
 <div class="container">
@@ -15,43 +18,51 @@
 
     </header>
 
-        <section class="score-panel">
-            <h3>Score Panel</h3>
+    <section class="score-panel">
+        <h3>Score Panel</h3>
 
-            <ul id="star-rating" class="rating">
-                <li class="star"><i class="fa fa-star"></i></li>
-                <li class="star"><i class="fa fa-star"></i></li>
-                <li class="star"><i class="fa fa-star"></i></li>
-            </ul>
+        <ul id="star-rating" class="rating">
+            <li class="star"><i class="fa fa-star"></i></li>
+            <li class="star"><i class="fa fa-star"></i></li>
+            <li class="star"><i class="fa fa-star"></i></li>
+        </ul>
 
-            <span class="moves-counter">0</span> Moves
-            <div class="timer-container">
-                <span class="timer"><i class="fa fa-hourglass-start"></i> Timer: 00:00</span>
+        <span class="moves-counter">0</span> Moves
+        <div class="timer-container">
+            <span class="timer"><i class="fa fa-hourglass-start"></i> Timer: 00:00</span>
+        </div>
+
+        <div class="reset">
+            <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
+        </div>
+        <div class="info">
+            <p id="more-info">The rules of the game are pretty simple: find the matching cards as fast as you can! If
+                you manage to complete the game in under 14 moves you'll keep your three star rating! If you complete it
+                in under 18 you'll get two, but any higher will put you down to one. Can you keep your three star
+                rating?</p>
+            <button id="info-btn">Click</button>
+        </div>
+    </section>
+
+    <!-- Modal -->
+
+    <section class="win-game-modal">
+
+        <div id="modal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Congratulations!</h2>
+                <p>You have won the game and found all 8 pairs of cards.</p>
+                <img src="" alt="" class="modal-img">
+                <button class="btn play-again-btn">Play Again?</button>
             </div>
-
-            <div class="reset">
-                <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
-            </div>
-        </section>
-
-        <!-- Modal -->
-
-        <section class="win-game-modal">
-
-            <div id="modal" class="modal">
-
-                <!-- Modal content -->
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h2>Congratulations!</h2>
-                    <p>You have won the game and found all 8 pairs of cards.</p>
-                    <img src="" alt="" class="modal-img">
-                    <button class="btn play-again-btn">Play Again?</button>
-                </div>
-            </div>
-        </section>
-        <ul class="deck"></ul>
+        </div>
+    </section>
+    <ul class="deck"></ul>
 </div>
 
 <script src="scripts/script.js"></script>
+
 </html>
