added how to play toggle & styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 you manage to complete the game in under 14 moves you'll keep your three star rating! If you complete it
                 in under 18 you'll get two, but any higher will put you down to one. Can you keep your three star
                 rating?</p>
-            <button id="info-btn">Click</button>
+            <button id="info-btn" class="btn success">How to play?</button>
         </div>
     </section>
 
