made relevant changes following validating all code

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <div class="reset">
             <button class="btn reset-btn">Reset <i class="fa fa-repeat"></i></button>
         </div>
-        
+
     </section>
-    <span class="info">
+    <div class="info">
         <p id="more-info">The rules of the game are pretty simple: find the matching cards as fast as you can! If
             you manage to complete the game in under 14 moves you'll keep your three star rating! If you complete it
             in under 18 you'll get two, but any higher will put you down to one. Can you keep your three star
             rating?</p>
         <button id="info-btn" class="btn success">How to play?</button>
-        </span>
+    </div>
     <!-- Modal -->
 
     <section class="win-game-modal">
