changed path of modal crown img

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span class="close">&times;</span>
                 <h2>Congratulations!</h2>
                 <p>You have won the game and found all 8 pairs of cards.</p>
-                <img src="../imgs/modalCrown.png" alt="modal crown" class="modal-img">
+                <img src="/imgs/modalCrown.png" alt="modal crown" class="modal-img">
                 <button class="btn play-again-btn">Play Again?</button>
             </div>
         </div>
